--- a/overview.ipynb
+++ b/overview.ipynb
@@ -1167,7 +1167,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# PIPELINE I/O "
+    "# PIPELINE I/O \n",
+    "# When you create a pipeline, you often need to read data from some external source, \n",
+    "# such as a file or a database. Likewise, you may want your pipeline to output \n",
+    "# its result data to an external storage system. Beam provides read and write transforms \n",
+    "# for a number of common data storage types.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# READING INPUT FROM DATA \n",
+    "lines = pipeline | beam.io.ReadFromText('gs://some/inputData.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WRITING OUTPUT TO DATA \n",
+    "output | beam.io.WriteToText('gs://some/outputData')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LINK TO ALL I/O CONNECTORS \n",
+    "https://beam.apache.org/documentation/io/connectors/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WRITING MULTIPLE OUTPUT FILES \n",
+    "filtered_words | 'WriteToText' >> beam.io.WriteToText(\n",
+    "    '/path/to/numbers', file_name_suffix='.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SCHEMAS \n",
+    "# Often, the types of the records being processed have an obvious structure.\n",
+    "#  Common Beam sources produce JSON, Avro, Protocol Buffer, or database row objects; \n",
+    "# all of these types have well defined structures, structures\n",
+    "#  that can often be determined by examining the type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WHAT IS SCHEMA \n",
+    "# Purchase\n",
+    "\n",
+    "# Field Name\tField Type\n",
+    "# userId\tSTRING\n",
+    "# itemId\tINT64\n",
+    "# shippingAddress\tROW(ShippingAddress)\n",
+    "# cost\tINT64\n",
+    "# transactions\tARRAY[ROW(Transaction)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SCHEMAS FOR PYTHON \n",
+    "import typing \n",
+    "\n",
+    "class Purchase(typing.NamedTuple):\n",
+    "    userId: str\n",
+    "    itemId: int\n",
+    "    shippingAddress: 'ShippingAddress'\n",
+    "    cost: int\n",
+    "    transactions: typing.List['Transaction']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# CONTINUE DOCUMENTATION \n",
+    "# BEGINNER UDEMY \n",
+    "# APACHE BEAM DOCS => WORD COUNT, MOBILE GAMING, \n",
+    "# APACHE BEAM IN JAVA TUTORIAL "
    ]
   }
  ],
